--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-numpy==1.18.1
-pandas==1.0.1
-Pillow==7.0.0
+numpy
+pandas
+Pillow
 protobuf==3.11.3
 python-dateutil==2.8.1
 pytz==2019.3
