--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ Keras-Preprocessing==1.1.0
 numpy
 pandas
 Pillow
-protobuf==3.11.3
+protobuf
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.3
+PyYAML
 regex==2020.2.20
 requests==2.23.0
 s3transfer==0.3.3
@@ -36,4 +36,4 @@ torch==1.4.0
 torchvision==0.5.0
 tqdm==4.43.0
 transformers==2.5.1
-urllib3==1.25.8
+urllib3
